[feat] WIP navigation, Update Login, Add ans WIP ships

--- a/starwars/styles/globals.css
+++ b/starwars/styles/globals.css
@@ -20,4 +20,4 @@ a {
   src: url("../public/font/Anakinmono.ttf");
 }
 
-@import url('https://fonts.googleapis.com/icon?family=Material+Icons')
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
