--- a/starwars/styles/Navbar.module.css
+++ b/starwars/styles/Navbar.module.css
@@ -1,41 +1,78 @@
 .navBar {
     width: 100%;
-    height: 60px;
+    top: 0;
     position : fixed;
     background-position:top;
-    color: rgba(0, 0, 0, 1);
     display: flex;
-    justify-content:flex-end;
+    flex-direction: column;
     align-items: center;
-    z-index: 100;
-    padding: 3vw;
+    background: url(/navigation_stars.jpeg);
+}
+
+.navTop {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 20vh;
+    z-index: 2;
+    padding-left: 24vw;
+    padding-right: 5vw;
+    color: #ffffff;
 }
 
 .navBar_logo {
-    margin-right: 40vw;
+    width: 10vw;
+    margin-left: auto;
+    margin-right: auto;
+    z-index: 2;
+}
+
+.navBar_onglets {
+    width: 100%;
+    height: 15vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-weight: 100;
+    color: #ffffff;
+    z-index: 2;
 }
 
 .navBar_onglets ul {
+    width: 100%;
+    height: 8vh;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     list-style: none;
-    width: 30vw;
-    padding-right: 5vw;
+    margin-top: 10vh;
+    padding: 0;
 }
 
-.search-container {
-    padding-right: 5vw;
+.navBar_onglets li {
+    width: 100%;
+    align-items: center;
+    text-align: center;
+    padding: 2vh 4vw 2vh 4vw;
+    border: 1px solid rgba(210, 210, 210, 0.5);
 }
 
-.search-container input {
-    border: 1px solid rgba(0, 0, 0,1);
+.searchContainer {
+    display: flex;
+    border: 1px solid rgb(255, 255, 255);
+    background-color:#000;
+    opacity: 0.7;
     border-radius: 4px;
 }
 
-.search-container button {
-    border: 1px solid rgba(0, 0, 0,1);
+.searchContainer input {
+    width: 80%;
+    background-color: transparent;
     border-radius: 4px;
+    border: none;
+    padding-left: 1vw;
 }
 
+.searchContainer button {
+    width: 20%;
+}
